--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <div id="status">ZIP 파일 목록을 불러오는 중...</div>
-    <pre id="file-content">파일을 선택하고 암호를 입력한 후 '파일 읽기' 버튼을 누르세요.</pre>
+    <div id="file-content">파일을 선택하고 암호를 입력한 후 '파일 읽기' 버튼을 누르세요.</div>
 
     <!-- zip.js 라이브러리를 CDN을 통해 불러옵니다 -->
     <script src="https://unpkg.com/@zip.js/zip.js@2.7.47/dist/zip.min.js"></script>
