--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; padding: 15px; font-size: 1.2em; }
         h1 { color: #333; }
         .control-group { margin-bottom: 15px; }
-        label { display: block; margin-bottom: 5px; font-weight: bold; }
+        label { display: block; margin-bottom: 5px; font-weight: bold; font-size: 2em; }
         input[type="password"], select, button { width: 100%; padding: 15px; box-sizing: border-box; border: 1px solid #ccc; border-radius: 4px; font-size: 2em; }
         button { background-color: #28a745; color: white; border: none; cursor: pointer; }
         button:disabled { background-color: #ccc; cursor: not-allowed; }
